--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/included/c-footer/c-footer-request-brochure.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/included/c-footer/c-footer-request-brochure.less
@@ -4,8 +4,6 @@
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
-    border-top: 1px solid fade(@white, 50%);
-    border-bottom: 1px solid fade(@white, 50%);
   }
 
   .request-brochure-title {
@@ -54,6 +52,33 @@
       color: @white;
     }
   }
+  //Custom Only Desktop and Tablet Style
+  @media (min-width: @screen-md-min) {
+    hr {
+      border-color: fade(@white, 20%);
+      margin-top: 0px;
+    }
+
+    .request-brochure-info-relative {
+      position: relative;
+    }
+
+    .request-brochure-info-absolute {
+      position: absolute;
+      top: 50%;
+      transform: translateY(5%);
+    }
+  }
+  //End Custom Only Desktop and Tablet Style
+
+  //Custom Only Desktop Style
+  @media (min-width: @screen-lg-min) {
+    .request-brochure-info-absolute {
+      top: 50%;
+      transform: translateY(45%);
+    }
+  }
+  //End Custom Only Desktop Style
 
   //Custom Only Desktop to 769px style
   @media (max-width: @screen-md-max) and (min-width: 769px) {
@@ -65,6 +90,18 @@
 
   //Custom Only Mobile Style
   @media (max-width: @screen-sm) {
+
+    &::after {
+      background-color: @white;
+      content: "";
+      display: inline-block;
+      height: 1px;
+      position: relative;
+      vertical-align: middle;
+      width: 110vw;
+      left: -10%;
+      opacity: 0.2;
+    }
     .container {
       display: flex;
       flex-direction: column;
